[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/moth_veev.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/EnemyM.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 77.368
height = 0.0

[node name="EnemyM" type="StaticBody2D"]
position = Vector2( 16.0361, 151.453 )
scale = Vector2( 0.997819, 0.873814 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 889.567, 379.324 )
scale = Vector2( 1.27316, 0.984637 )
texture = ExtResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="MotveevsFace" type="CollisionShape2D" parent="."]
position = Vector2( 887.339, 345.746 )
scale = Vector2( 0.639998, 0.88 )
shape = SubResource( 1 )

[node name="Aitch_pos" type="Position2D" parent="."]
position = Vector2( 812.489, 403.742 )
[connection signal="dead" from="." to="." method="_on_EnemyM_dead"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
